--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="contacts">
             <li>
                 <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a>
             </li>
@@ -38,8 +38,8 @@
             <button type="button" class="button-intro">Заказать услугу</button>
         </section>
         <section class="priorities">
-            <h2 hidden>Наши приоритеты</h2>
-            <ul>
+            <h2 class="visually-hidden">Наши приоритеты</h2>
+            <ul class="priorities-items">
                 <li>
                     <h3 class="priorities-title">Внимание к деталям</h3>
                     <p class="priorities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -60,7 +60,7 @@
         </section>
         <section>
             <h2 class="services-title">Чем мы занимаемся</h2>
-            <ul>
+            <ul class="services-items">
                 <li><img src="img/box3.jpg" alt="" width="370"></li>
                 <li><img src="img/box2.jpg" alt="" width="370"></li>
                 <li><img src="img/box1.jpg" alt="" width="370"></li>
@@ -69,7 +69,7 @@
         </section>
         <section class="team-section">
             <h2 class="team-title">Наша команда</h2>
-            <ul>
+            <ul class="team-items">
                 <li>
                     <img src="img/4.jpg" alt="" width="270" height="260">
                     <h3 class="team-member">Игорь Демьяненко</h3>
@@ -97,9 +97,9 @@
     </main>
     <footer class="footer">
         <a href="./index.html" class="logo"><span class="logo-title">Web</span><span class="logo-text">Studio</span></a>
-        <address>
+        <address class="place">
             <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
+            <ul class="footer-contacts">
                 <li>
                     <a href="mailto:info@example.com" class="footer-link">info@example.com</a>
                 </li>
