--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <li><a href="#" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="contacts">
             <li>
                 <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a>
             </li>
@@ -34,59 +34,57 @@
     </header>
     <main>
         <section class="section-portfolio">
-            <h1 class="section-title " hidden>Портфолио</h1>
-            <div>
-                <ul>
-                    <li><button type="button" class="buttons">Все</button></li>
-                    <li><button type="button" class="buttons">Веб-сайты</button></li>
-                    <li><button type="button" class="buttons">Приложения</button></li>
-                    <li><button type="button" class="buttons">Дизайн</button></li>
-                    <li><button type="button" class="buttons">Маркетинг</button></li>
-                </ul>
-            </div>
-            <ul>
+            <h1 class="section-title visually-hidden">Портфолио</h1>
+            <ul class="section-btn">
+                <li><button type="button" class="buttons">Все</button></li>
+                <li><button type="button" class="buttons">Веб-сайты</button></li>
+                <li><button type="button" class="buttons">Приложения</button></li>
+                <li><button type="button" class="buttons">Дизайн</button></li>
+                <li><button type="button" class="buttons">Маркетинг</button></li>
+            </ul>
+            <ul class="portfolio-items">
                 <li>
-                    <img src="img/squoosh/img1.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img1.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Технокряк</h2>
                     <p class="section-text ">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="img/squoosh/img2.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img2.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Постер New Orlean vs Golden Star</h2>
                     <p class="section-text ">Дизайн</p>
                 </li>
                 <li>
-                    <img src="img/squoosh/img3.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img3.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Ресторан Seafood</h2>
                     <p class="section-text ">Приложение</p>
                 </li>
                 <li>
-                    <img src="img/squoosh/img4.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img4.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Проект Prime</h2>
                     <p class="section-text ">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="img/squoosh/img5.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img5.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Проект Boxes</h2>
                     <p class="section-text ">Приложение</p>
                 </li>
                 <li>
-                    <img src="img/img6.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img6.jpg" width="370" height="295" alt=" ">
                     <h2 class="section-title ">Inspiration has no Borders</h2>
                     <p class="section-text ">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="img/squoosh/img7.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img7.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Издание Limited Edition</h2>
                     <p class="section-text ">Дизайн</p>
                 </li>
                 <li>
-                    <img src="img/squoosh/img8.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img8.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Проект LAB</h2>
                     <p class="section-text ">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="img/squoosh/img9.jpg " width="370 " height="295 " alt=" ">
+                    <img src="img/squoosh/img9.jpg " width="370" height="295" alt=" ">
                     <h2 class="section-title ">Growing Business</h2>
                     <p class="section-text ">Приложение</p>
                 </li>
@@ -98,9 +96,9 @@
     </main>
     <footer class="footer">
         <a href="./index.html " class="logo"><span class="logo-title">Web</span><span class="logo-text">Studio</span></a>
-        <address>
+        <address class="place">
             <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
+            <ul class="footer-contacts">
                 <li>
                     <a href="mailto:info@example.com " class="footer-link">info@example.com</a>
                 </li>
